== January, 31 2011 [by {rymai}[http://github.com/rymai/]]

=== Changes:
Huge refactoring and improvement of the whole gem, see details below.

* User Agent strings parsing:
  * Improved the Regexp (based on http://www.texsoft.it/index.php?m=sw.php.useragent) use for the User Agent strings parsing.
  * Strip comments and reject blank comments.
  * Added more platform ans OS detection.

* User Agent platforms detection:
  * Detect following platforms: Nintendo Wii, WebTV, Windows, iPad, iPod, iPhone Simulator, iPhone, SunOS, webOS, Macintosh, Android, FreeBSD, OpenBSD, NetBSD, Linux, Nokia, BlackBerry, OpenSolaris, OS/2, BeOS, AIX and X11.

* User Agent operating systems detection:
  * Detect following operating systems: Windows 7, Windows Vista, Windows Server 2003, Windows XP, Windows 2000, Service Pack 1 (SP1), Windows NT, Windows NT 4.0, Windows NT 4.0, Windows NT, Windows 2000, Windows Me, FreeBSD, OpenBSD, NetBSD, SunOS, BeOS, OS/2, WebTV, Linux, AmigaOS and BlackBerryOS.

* User Agent linux distributions detection:
  * Detect following linux distributions: Debian, Kubuntu, Ubuntu, Fedora, SUSE, Gentoo and Mandriva.

* User Agent languages detection:
  * Detect User Agent languages verified against the ISO-639-2 (languages codes) and ISO-3166-1 (countries codes).
  * Detect User Agent languages formatted "en", "en-US" and "en_US".

* User Agent security detection:
  * Improved detection of User Agent security.

* Gecko-based browsers detection:
  * Detect more Gecko-based browsers: Beonex, BonEcho, Camino, Fennec, Firebird, Flock, Galeon, Iceweasel, Minefield, Netscape, Phoenix, Seamonkey, Sunrise, Thunderbird and Firefox.
  * Detect 'rv:X.Y.Z' in comments as the version for true Mozilla.
  * Detect Gecko version in product and in comments.

* Internet Explorer-based browsers detection:
  * Detect more mobile User Agents.
  * Detect more chromeframe versions (use directly chromeframe_version now instead of chromeframe.version).
