@@ -3,6 +3,7 @@ require 'user_agent/browsers/other'
 require 'user_agent/browsers/opera'
 require 'user_agent/browsers/internet_explorer'
 require 'user_agent/browsers/webkit'
+require 'user_agent/browsers/googlebot'
 require 'user_agent/browsers/gecko'
 
 class UserAgent
@@ -16,7 +17,8 @@ class UserAgent
 
     def self.all
       # Opera must be checked before Firefox due to the odd user agents used in some older versions of Opera
-      [Other, Opera, InternetExplorer, Webkit, Gecko]
+      # Googlebot must be checked before Gecko because 2.1 uses Mozilla as user-agent
+      [Other, Opera, InternetExplorer, Webkit, Googlebot, Gecko]
     end
 
     def self.extend(array)
